--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -2,12 +2,16 @@ name: Publish GitHub release
 
 on:
   workflow_dispatch:
-  pull_request:
+    inputs:
+      tag:
+        description: 'Tag name'
+        required: true
+        default: v*.*.*
+      release_name:
+        description: 'Special name changes'
+        required: true
+        default: Describe here what was changed
 
-
-env:
-  tag: v1.0.0
-  message: test_tag
 
 jobs:
   create-release:
@@ -20,27 +24,27 @@ jobs:
 
       - uses: rickstaa/action-create-tag@v1
         with:
-          tag: ${{ env.tag }}
-          message: ${{ env.message }}
+          tag: ${{ github.event.inputs.tag }}
+          message: ${{ github.event.inputs.release_name }}
 
       - name: Build release
         run: cargo build --release
 
       - name: Rename artifacts
-        run: mv ./target/release/governance2 ./target/release/governance2-${{ env.tag }}
+        run: mv ./target/release/governance2 ./target/release/governance2-${{ github.event.inputs.tag }}
 
       - name: ➡️ Upload build artifacts
         uses: actions/upload-artifact@v2
         with:
           name: bin
-          path: ./target/release/governance2-${{ env.tag }}
+          path: ./target/release/governance2-${{ github.event.inputs.tag }}
 
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ env.tag }}
-          name: ${{ env.message }}
+          tag_name: ${{ github.event.inputs.tag }}
+          name: ${{ github.event.inputs.release_name }}
           draft: false
-          files: ./target/release/governance2-${{ env.tag }}
+          files: ./target/release/governance2-${{ github.event.inputs.tag }}
 
