--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -11,6 +11,7 @@ on:
         description: 'Special name changes'
         required: true
         default: Describe here what was changed
+  pull_request:
 
 
 jobs:
@@ -24,27 +25,27 @@ jobs:
 
       - uses: rickstaa/action-create-tag@v1
         with:
-          tag: ${{ github.event.inputs.tag }}
-          message: ${{ github.event.inputs.release_name }}
+          tag: v1.1.1
+          message: Decrease governance periods
 
       - name: Build release
         run: cargo build --release
 
       - name: Rename artifacts
-        run: mv ./target/release/governance2 ./target/release/governance2-${{ github.event.inputs.tag }}
+        run: mv ./target/release/governance2 ./target/release/governance2-v1.1.1
 
       - name: ➡️ Upload build artifacts
         uses: actions/upload-artifact@v2
         with:
           name: bin
-          path: ./target/release/governance2-${{ github.event.inputs.tag }}
+          path: ./target/release/governance2-v1.1.1
 
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.event.inputs.tag }}
-          name: ${{ github.event.inputs.release_name }}
+          tag_name: v1.1.1
+          name: Decrease governance periods
           draft: false
-          files: ./target/release/governance2-${{ github.event.inputs.tag }}
+          files: ./target/release/governance2-v1.1.1
 
