--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -28,7 +28,7 @@ jobs:
           message: ${{ github.event.inputs.release_name }}
 
       - name: Build release
-        run: cargo build --features fast-runtime
+        run: cargo build --release
 
       - name: Rename artifacts
         run: mv ./target/release/governance2 ./target/release/governance2-${{ github.event.inputs.tag }}
